--- a/html.html
+++ b/html.html
@@ -17,7 +17,7 @@
             <li>第五项</li>
         </ul>
 
-        <a href="https:/baidu.com">跳转到百度</a>
+        <a href="https:/baidu.com" target="_blank">跳转到百度</a>
 
 
     </body>
