--- a/html.html
+++ b/html.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        a{
+            
+        }
 
     </head>
     <body>
@@ -18,6 +21,33 @@
         </ul>
 
         <a href="https:/baidu.com" target="_blank">跳转到百度</a>
+
+    <a href="https:/baidu.com" target="_blank" style="
+        display: block;
+        font-size: 40px;
+        color: #ff00dd;
+        text-align: center;
+        border: 1px solid #ff00dd
+        ">跳转到百度</a>
+    
+    <span style="
+    display: block;
+    font-size: 40px;
+    color: #ff00dd;
+    text-align: center;
+    border: 1px solid #ff00dd 
+    ">文本</span>
+
+    <div style="
+    width: 1000px;
+    height: 1000px;
+    color: #ff00dd;
+    border: 5px solid #0f0add;
+    background: #ff00dd url(http://tiebapic.baidu.com/forum/w%3D580/sign=4267ae34322dd42a5f0901a3333a5b2f/b938cc628535e5dd725c5e8261c6a7efcf1b6272.jpg) no-repeat 80px 80px;
+    ">
+    <img src="https://gss3.bdstatic.com/84oSdTum2Q5BphGlnYG/timg?wapp&quality=80&size=b150_150&subsize=20480&cut_x=0&cut_w=0&cut_y=0&cut_h=0&sec=1369815402&srctrace&di=ec1382c9aefd69ea019eaf1234391e9d&wh_rate=null&src=http%3A%2F%2Fimgsrc.baidu.com%2Fforum%2Fpic%2Fitem%2F060828381f30e92431be26464f086e061d95f7ab.jpg"/>
+    </div>
+
 
 
     </body>
