--- a/html.html
+++ b/html.html
@@ -23,7 +23,7 @@
                 height: 1000px;
                 color: #ff0000;
                 border: 5px solid #ffff00;
-                background: #00ffff url(http://tiebapic.baidu.com/forum/w%3D580/sign=4267ae34322dd42a5f0901a3333a5b2f/b938cc628535e5dd725c5e8261c6a7efcf1b6272.jpg) no-repeat 80px 80px;
+                background: #00ffff url(http://tiebapic.baidu.com/forum/w%3D580/sign=4267ae34322dd42a5f0901a3333a5b2f/b938cc628535e5dd725c5e8261c6a7efcf1b6272.jpg) no-repeat 80px 80px;                
             }
 
 
@@ -41,6 +41,11 @@
                 color: #ff00dd;
                 border: 5px solid #0f0add;
                 background: #ff00dd url(http://tiebapic.baidu.com/forum/w%3D580/sign=4267ae34322dd42a5f0901a3333a5b2f/b938cc628535e5dd725c5e8261c6a7efcf1b6272.jpg) no-repeat 80px 80px;
+                position: relative;
+                top: 200px;
+                right: 200px;
+                bottom: 200px;
+                left: 200px;
             }
 
             #a004 div span a {
@@ -67,6 +72,44 @@
                 text-align: center;
                 border: 5px solid #ddab08
             }
+
+            #a006 {
+                width: 300px;
+                height: 200px;
+                color: #43437277;
+                text-align: center;
+                background: #1c89e2;
+                position: relative;
+                top: 30px;
+                left: 20px;
+                border: 3px solid #1c89e2           
+            }
+
+            #a007 {
+                width: 300px;
+                height: 200px;
+                color: #19bebe77;
+                text-align: center;
+                background: #df500e;
+                position: fixed;
+                top: 50px;
+                left: 500px;
+                border: 3px solid #4e5357           
+            }
+
+            #a008 {
+                width: 300px;
+                height: 200px;
+                z-index: 100px;
+                color: #be841977;
+                text-align: center;
+                background: #3b0edf;
+                position: absolute;
+                top: 100px;
+                left: 20px;
+                border: 3px solid #c41765           
+            }
+
         </style>
     </head>
     <body>
@@ -102,6 +145,12 @@
         </div>
 
         <div id="a005">学习</div>
+
+        <div id="a006">前端</div>
+
+        <div id="a007">123</div>
+
+        <div id="a008">456</div>
 
         </body>
     </html>
