--- a/html.html
+++ b/html.html
@@ -61,7 +61,8 @@
                 font-size: 20px;
                 color: #00ff3777;
                 text-align: center;
-                border: 2px solid #1c89e2
+                border: 2px solid #1c89e2;
+                position: relative;
             }
 
             #a005:hover{
@@ -100,7 +101,7 @@
             #a008 {
                 width: 300px;
                 height: 200px;
-                z-index: 100px;
+                z-index: 100;
                 color: #be841977;
                 text-align: center;
                 background: #3b0edf;
@@ -144,13 +145,14 @@
             </div>
         </div>
 
-        <div id="a005">学习</div>
+        <div id="a005">学习
+            <div id="a008">456</div>
 
+        </div>
         <div id="a006">前端</div>
 
         <div id="a007">123</div>
 
-        <div id="a008">456</div>
 
         </body>
     </html>
