--- a/zhipin copy.html
+++ b/zhipin copy.html
@@ -8,66 +8,73 @@
               width: 100%;
               height: 49px;
               background: #202329;
-              display: flex;
-              justify-content: center;
+              position: relative;
             }
-            .header-main {
+            .header-main{
+              display: flex;
               width: 1184px;
               height: 49px;
-              display: flex
+              border: 1px solid #f00;
+              justify-content: center;
+              align-items: center;
             }
+            /* .blank {
+              display: inline-block;
+              width: 167.6px;
+              height: 49px; */
+            /* } */
             .logo {
-              flex: 1.8;
-              width: 105px;
-              height: 30px;
+              display: inline-block;
+              width: 110px;
+              height: 36px;
               background: url(https://static.zhipin.com/zhipin-geek/v313/web/geek/images/logo-2x.png) 3px 7px no-repeat;
               background-size: 105px 19px;
               position: relative;
-              top: 5px; 
+              top: -5px; 
 
             }
             .nav-city {
-              flex: 2;
-              display: flex;
+              display: inline-block;
               width: 110px;
               height: 36px;
               position: relative;
             }
             .icon-poi {
-              flex: 0.4;
+              display: inline-block;
               width: 15px;
               height: 28px;
               background: url(https://static.zhipin.com/zhipin-geek/v313/web/geek/images/icon-poi.png) 0 -165px;
-              margin: 16px 3px 0 12px;
+              margin: 17px 3px 0 12px;
             }
             .nav-city-selected {
-              flex: 1;               
+              display: inline-block;                
               width: 28px;
               height: 14px;
               font-size: 14px;
               color: #00d7c6;
               position: relative;
-              top:13px;
+              top:12px;
             }
             .switchover-city {
-              flex: 2;               
+              display: inline-block;                
               width: 60px;
               height: 14px;
               font-size: 12px;
               color: #ffffff;
               position: relative;
-              top:15px;
+              top:13px;
+              left: 67px;
             }
             .nav {
-              flex: 4;
-              display: flex;
+              display: inline-block;
               width: 340px;
               height: 48.8px;
               position: relative;
               font-size: 14px;
+              margin-left: 25px;
             }
             .header-home {
-              flex: 1;
+              display: inline-block;
               width: 48px;
               height: 48.8px;
               font-size: 14px;
@@ -75,10 +82,10 @@
               font-size: 14px;
               text-align: center;
               line-height: 48.8px;
-              position: relative;
+              margin-left: 10px;
             }
             .header-job {
-              flex: 1;
+              display: inline-block;
               width: 48px;
               height: 48.8px;
               font-size: 14px;
@@ -88,7 +95,7 @@
               line-height: 48.8px;
             }
             .nav-school-new {
-              flex: 1;
+              display: inline-block;
               width: 48px;
               height: 48.8px;
               font-size: 14px;
@@ -98,7 +105,7 @@
               line-height: 48.8px;
             }
             .header_brand {
-              flex: 1;
+              display: inline-block;
               width: 48px;
               height: 48.8px;
               font-size: 14px;
@@ -108,7 +115,7 @@
               line-height: 48.8px;
             }
             .header-app {
-              flex: 1;
+              display: inline-block;
               width: 48px;
               height: 48.8px;
               font-size: 14px;
@@ -118,7 +125,7 @@
               line-height: 48.8px;
             }
             .header-article {
-              flex: 1;
+              display: inline-block;
               width: 48px;
               height: 48.8px;
               font-size: 14px;
@@ -126,90 +133,13 @@
               font-size: 14px;
               text-align: center;
               line-height: 48.8px;
-            }
-            .btns {
-              flex: 10;
-              display: flex;
-              width: 340px;
-              height: 48.8px;
-              position: relative;
-              font-size: 14px;
-            }
-            .nlp_resume_upload {
-              flex: 1.5;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-              position: relative;
-              margin: 0 0 0 300px;
-            }
-            .header-geek {
-              flex: 2;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-            }
-            .header-boss {
-              flex: 1.5;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-            }
-            .header-register {
-              flex: 0.7;
-              display: flex;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 15px;
-              border: 1px solid#00d7c6;
-              border-radius: 20px;
-              height: 26px;
-              align-items: center;
-              padding: 0 0 0 7px;
-              margin: 11px 0 0 0;
-              position: relative;
-              left: 15px;
-            }
-            .header-login {
-                flex: 0.7;
-              display: flex;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 15px;
-              border: 1px solid#00d7c6;
-              border-radius: 20px;
-              height: 26px;
-              align-items: center;
-              padding: 0 0 0 7px;
-              margin: 11px 0 0 0;
-              position: relative;
-              left: 30px;
             }
         </style>
     </head>
     <body>
         <div id="header">
             <div class="header-main">
+                <!-- <div class="blank"></div> -->
                 <div class="logo"></div>
                 <div class="nav-city">
                     <div class="icon-poi"></div>
@@ -223,13 +153,6 @@
                     <div class="header_brand">公司</div>
                     <div class="header-app">APP</div>
                     <div class="header-article">资讯</div>
-                </div>
-                <div class="btns">
-                    <div class="nlp_resume_upload">上传简历</div>
-                    <div class="header-geek">我要找工作</div>
-                    <div class="header-boss">我要招聘</div>
-                    <div class="header-register">注册</div>
-                    <div class="header-login">登录</div>
                 </div>
             </div>
         </div>
