--- a/zhipin.html
+++ b/zhipin.html
@@ -1,237 +1,383 @@
 <html>
-    <head>
-        <style>
-            body {
-              margin: 0;
-            }
-            #header {
-              width: 100%;
-              height: 49px;
-              background: #202329;
-              display: flex;
-              justify-content: center;
-            }
-            .header-main {
-              width: 1184px;
-              height: 49px;
-              display: flex
-            }
-            .logo {
-              flex: 1.8;
-              width: 105px;
-              height: 30px;
-              background: url(https://static.zhipin.com/zhipin-geek/v313/web/geek/images/logo-2x.png) 3px 7px no-repeat;
-              background-size: 105px 19px;
-              position: relative;
-              top: 5px; 
-
-            }
-            .nav-city {
-              flex: 2;
-              display: flex;
-              width: 110px;
-              height: 36px;
-              position: relative;
-            }
-            .icon-poi {
-              flex: 0.4;
-              width: 15px;
-              height: 28px;
-              background: url(https://static.zhipin.com/zhipin-geek/v313/web/geek/images/icon-poi.png) 0 -165px;
-              margin: 16px 3px 0 12px;
-            }
-            .nav-city-selected {
-              flex: 1;               
-              width: 28px;
-              height: 14px;
-              font-size: 14px;
-              color: #00d7c6;
-              position: relative;
-              top:13px;
-            }
-            .switchover-city {
-              flex: 2;               
-              width: 60px;
-              height: 14px;
-              font-size: 12px;
-              color: #ffffff;
-              position: relative;
-              top:15px;
-            }
-            .nav {
-              flex: 4;
-              display: flex;
-              width: 340px;
-              height: 48.8px;
-              position: relative;
-              font-size: 14px;
-            }
-            .header-home {
-              flex: 1;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #00d7c6;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-              position: relative;
-            }
-            .header-job {
-              flex: 1;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-            }
-            .nav-school-new {
-              flex: 1;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-            }
-            .header_brand {
-              flex: 1;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-            }
-            .header-app {
-              flex: 1;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-            }
-            .header-article {
-              flex: 1;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-            }
-            .btns {
-              flex: 10;
-              display: flex;
-              width: 340px;
-              height: 48.8px;
-              position: relative;
-              font-size: 14px;
-            }
-            .nlp_resume_upload {
-              flex: 1.5;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-              position: relative;
-              margin: 0 0 0 300px;
-            }
-            .header-geek {
-              flex: 2;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-            }
-            .header-boss {
-              flex: 1.5;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 48.8px;
-            }
-            .header-register {
-              flex: 0.7;
-              display: flex;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 15px;
-              border: 1px solid#00d7c6;
-              border-radius: 20px;
-              height: 26px;
-              align-items: center;
-              padding: 0 0 0 7px;
-              margin: 11px 0 0 0;
-              position: relative;
-              left: 15px;
-            }
-            .header-login {
-                flex: 0.7;
-              display: flex;
-              width: 48px;
-              height: 48.8px;
-              font-size: 14px;
-              color: #fff;
-              font-size: 14px;
-              text-align: center;
-              line-height: 15px;
-              border: 1px solid#00d7c6;
-              border-radius: 20px;
-              height: 26px;
-              align-items: center;
-              padding: 0 0 0 7px;
-              margin: 11px 0 0 0;
-              position: relative;
-              left: 30px;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="header">
-            <div class="header-main">
-                <div class="logo"></div>
-                <div class="nav-city">
-                    <div class="icon-poi"></div>
-                    <div class="nav-city-selected">西安</div>
-                    <div class="switchover-city">[切换城市]</div>
-                </div>
-                <div class="nav">
-                    <div class="header-home">首页</div>
-                    <div class="header-job">职位</div>
-                    <div class="nav-school-new">校园</div>
-                    <div class="header_brand">公司</div>
-                    <div class="header-app">APP</div>
-                    <div class="header-article">资讯</div>
-                </div>
-                <div class="btns">
-                    <div class="nlp_resume_upload">上传简历</div>
-                    <div class="header-geek">我要找工作</div>
-                    <div class="header-boss">我要招聘</div>
-                    <div class="header-register">注册</div>
-                    <div class="header-login">登录</div>
-                </div>
-            </div>
+  <head>
+    <style>
+      body {
+        margin: 0;
+        }
+      #header {
+        width: 100%;
+        height: 49px;
+        background: #202329;
+        display: flex;
+        justify-content: center;
+        }
+      .header-main {
+        width: 1184px;
+        height: 49px;
+        display: flex
+        }
+       .logo {
+        flex: 1.8;
+        width: 105px;
+        height: 30px;
+        background: url(https://static.zhipin.com/zhipin-geek/v313/web/geek/images/logo-2x.png) 3px 7px no-repeat;
+        background-size: 105px 19px;
+        position: relative;
+        top: 5px; 
+        }
+      .nav-city {
+        flex: 2;
+        display: flex;
+        width: 110px;
+        height: 36px;
+        position: relative;
+      }
+      .icon-poi {
+        flex: 0.4;
+        width: 15px;
+        height: 28px;
+        background: url(https://static.zhipin.com/zhipin-geek/v313/web/geek/images/icon-poi.png) 0 -165px;
+        margin: 16px 3px 0 12px;
+      }
+      .nav-city-selected {
+        flex: 1;               
+        width: 28px;
+        height: 14px;
+        font-size: 14px;
+        color: #00d7c6;
+        position: relative;
+        top:13px;
+      }
+      .switchover-city {
+        flex: 2;               
+        width: 60px;
+        height: 14px;
+        font-size: 12px;
+        color: #ffffff;
+        position: relative;
+        top:15px;
+      }
+      .nav {
+        flex: 4;
+        display: flex;
+        width: 340px;
+        height: 48.8px;
+        position: relative;
+        font-size: 14px;
+      }
+      .header-home {
+        flex: 1;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #00d7c6;
+        font-size: 14px;
+        text-align: center;
+        line-height: 48.8px;
+        position: relative;
+      }
+      .header-job {
+        flex: 1;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 48.8px;
+      }
+      .nav-school-new {
+        flex: 1;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 48.8px;
+      }
+      .header_brand {
+        flex: 1;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 48.8px;
+      }
+      .header-app {
+        flex: 1;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 48.8px;
+      }
+      .header-article {
+        flex: 1;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 48.8px;
+      }
+      .btns {
+        flex: 10;
+        display: flex;
+        width: 340px;
+        height: 48.8px;
+        position: relative;
+        font-size: 14px;
+      }
+      .nlp_resume_upload {
+        flex: 1.5;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 48.8px;
+        position: relative;
+        margin: 0 0 0 300px;
+      }
+      .header-geek {
+        flex: 2;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 48.8px;
+      }
+      .header-boss {
+        flex: 1.5;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 48.8px;
+      }
+      .header-register {
+        flex: 0.7;
+        display: flex;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 15px;
+        border: 1px solid#00d7c6;
+        border-radius: 20px;
+        height: 26px;
+        align-items: center;
+        padding: 0 0 0 7px;
+        margin: 11px 0 0 0;
+        position: relative;
+        left: 15px;
+      }
+      .header-login {
+          flex: 0.7;
+        display: flex;
+        width: 48px;
+        height: 48.8px;
+        font-size: 14px;
+        color: #fff;
+        font-size: 14px;
+        text-align: center;
+        line-height: 15px;
+        border: 1px solid#00d7c6;
+        border-radius: 20px;
+        height: 26px;
+        align-items: center;
+        padding: 0 0 0 7px;
+        margin: 11px 0 0 0;
+        position: relative;
+        left: 30px;
+      }
+      .un-login-banner {
+        width: 100%;
+        height: 120px;
+        background: #00b38a;
+        display: flex;
+        justify-content: center;
+      }
+      .un-login-banner-inner {
+        display: flex;
+        width: 1200;
+        height: 100%;
+      }
+      .un-login-banner-inner .ad-logo {
+        width: 228px;
+        height: 120px;
+        background: #00b38a url(https://www.lgstatic.com/lg-www-fed/common/widgets/un_login_banner/img/logo_41a2761.png) no-repeat;
+        background-size: 228px 120px;
+      }
+      .un-login-banner-inner .text-wrapper {
+        flex: 1;
+      }
+      .un-login-banner-inner .text-wrapper .text-wrapper-img {
+        width: 334px;
+        height: 30px;
+        background: #00b38a url(https://www.lgstatic.com/lg-www-fed/common/widgets/un_login_banner/img/text_4434674.png) no-repeat;
+        background-size: 334px 30px;
+        margin: 40px 0 0 25px;
+      }
+      .un-login-banner-inner .text-wrapper .text-wrapper-content {
+        font-family: PingFangSC-Medium;
+        font-size: 14px;
+        color: #FFF;
+        margin: 5px 0 0 25px;
+      }
+      .register-login-form {
+        position: relative;
+        width: 485px;
+        height: 120;
+        margin: -95px 0 0 500px;
+      }
+      .register-login-form .input-wrapper-tel {
+        width: 212px;
+        height: 35px;
+        margin: 45px 0 0 0;
+      }
+      .register-login-form .input-wrapper-tel .area-code-content {
+        width: 66px;
+        height: 35px;
+        background: #fff;
+        font-size: 14px;
+        font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+        text-align: center;
+        line-height: 35px;
+        color: #999;
+      }
+      .register-login-form .input-wrapper-tel .area-code-content-after {
+        width: 9px;
+        height: 5px;
+        position: absolute;
+        margin: -17.5px 0 0 66px;
+        background: #fff url(https://www.lgstatic.com/lg-www-fed/common/widgets/un_login_banner/img/trangle_1091ce9.png) no-repeat;
+        color: #999;
+        display: inline-block;
+      }
+      .register-login-form .input-wrapper-tel .tell-input {
+        display: inline-block;
+        width: 146px;
+        height: 35px;
+        background: #fff;
+        font-size: 14px;
+        font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+        text-align: center;
+        line-height: 35px;
+        color: #ededed;
+        border: 0;
+        margin: -35px 0 0 66px;
+      }
+      .yzm-input {
+        display: inline-block;
+        width: 94px;
+        height: 35px;
+        background: #fff;
+        font-size: 14px;
+        font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+        line-height: 35px;
+        color: #ededed;
+        border: 0;
+        margin: -35px 0 0 221px;
+        padding: 0 0 0 10px;
+      }
+      .yzm-btn {
+        display: inline-block;
+        width: 52px;
+        height: 35px;
+        background: #fff;
+        font-size: 14px;
+        font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+        line-height: 35px;
+        margin: -35px 0 0 310px;
+        text-align: center;
+        line-height: 35px;
+        color: #00b38a;
+      }
+      .yzm-btn:before {
+        content: '';
+        position: absolute;
+        left: 308;
+        top: 13px;
+        width: 1px;
+        height: 12px;
+        background: #d5dadf;
+        overflow: hidden;
+      }
+      .register-login-btn {
+        width: 107px;
+        height: 34px;
+        border: 1px solid#fff;
+        color: #fff;
+        text-align: center;
+        line-height: 35px;
+        font-size: 14px;
+        margin: -35px 0 0 373px;
+      }
+      .register-login-btn:hover {
+        background: rgba(255,255,255,0.25)
+      }
+    </style>
+  </head>
+  <body>
+    <div id="header">
+      <div class="header-main">
+        <div class="logo"></div>
+        <div class="nav-city">
+          <div class="icon-poi"></div>
+          <div class="nav-city-selected">西安</div>
+          <div class="switchover-city">[切换城市]</div>
         </div>
-    </body>
+        <div class="nav">
+          <div class="header-home">首页</div>
+          <div class="header-job">职位</div>
+          <div class="nav-school-new">校园</div>
+          <div class="header_brand">公司</div>
+          <div class="header-app">APP</div>
+          <div class="header-article">资讯</div>
+        </div>
+        <div class="btns">
+          <div class="nlp_resume_upload">上传简历</div>
+          <div class="header-geek">我要找工作</div>
+          <div class="header-boss">我要招聘</div>
+          <div class="header-register">注册</div>
+          <div class="header-login">登录</div>
+        </div>
+      </div>
+    </div>
+    <div class="un-login-banner">
+      <div class="un-login-banner-inner">
+        <div class="ad-logo"></div>
+        <div class="text-wrapper">
+          <div class="text-wrapper-img"></div>
+          <div class="text-wrapper-content">1017598家公司 | 7750951个职位，在拉勾等你</div>
+          <div class="register-login-form">
+            <div class="input-wrapper-tel">
+              <div class="area-code-content">0086</div>
+              <div class="area-code-content-after"></div>
+              <input type="text" class="tell-input" placeholder="输入手机号" />
+            </div>
+            <div class="input-wrapper yzm">
+              <input type="text" class="yzm-input" placeholder="验证码" />
+              <div class="yzm-btn">获取</div>
+            </div>
+            <div class="register-login-btn">登录/注册</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
