--- a/zhipin.html
+++ b/zhipin.html
@@ -86,6 +86,9 @@
         text-align: center;
         line-height: 48.8px;
       }
+      .header-job:hover {
+        color: #00d7c6;
+      }
       .nav-school-new {
         flex: 1;
         width: 48px;
@@ -95,6 +98,9 @@
         font-size: 14px;
         text-align: center;
         line-height: 48.8px;
+      }
+      .nav-school-new:hover {
+        color: #00d7c6;
       }
       .header_brand {
         flex: 1;
@@ -106,6 +112,9 @@
         text-align: center;
         line-height: 48.8px;
       }
+      .header_brand:hover {
+        color: #00d7c6;
+      }
       .header-app {
         flex: 1;
         width: 48px;
@@ -116,6 +125,9 @@
         text-align: center;
         line-height: 48.8px;
       }
+      .header-app:hover {
+        color: #00d7c6;
+      }
       .header-article {
         flex: 1;
         width: 48px;
@@ -125,6 +137,9 @@
         font-size: 14px;
         text-align: center;
         line-height: 48.8px;
+      }
+      .header-article:hover {
+        color: #00d7c6;
       }
       .btns {
         flex: 10;
@@ -146,6 +161,9 @@
         position: relative;
         margin: 0 0 0 300px;
       }
+      .nlp_resume_upload:hover {
+        color: #00d7c6;
+      }
       .header-geek {
         flex: 2;
         width: 48px;
@@ -156,6 +174,9 @@
         text-align: center;
         line-height: 48.8px;
       }
+      .header-geek:hover {
+        color: #00d7c6;
+      }
       .header-boss {
         flex: 1.5;
         width: 48px;
@@ -165,6 +186,9 @@
         font-size: 14px;
         text-align: center;
         line-height: 48.8px;
+      }
+      .header-boss:hover {
+        color: #00d7c6;
       }
       .header-register {
         flex: 0.7;
@@ -185,6 +209,9 @@
         position: relative;
         left: 15px;
       }
+      .header-register:hover {
+        color: #00d7c6;
+      }
       .header-login {
           flex: 0.7;
         display: flex;
@@ -203,6 +230,9 @@
         margin: 11px 0 0 0;
         position: relative;
         left: 30px;
+      }
+      .header-login:hover {
+        color: #00d7c6;
       }
       .un-login-banner {
         width: 100%;
