--- a/zhipin.html
+++ b/zhipin.html
@@ -363,7 +363,7 @@
       .search-wrapper {
         width: 100%;
         height: 120px;
-        background: #fff;
+        background: #f2f5f4;
         display: flex;
         justify-content: center;
         align-items: center;
