新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -310,6 +310,7 @@
         color: #ededed;
         border: 0;
         margin: -35px 0 0 66px;
+        outline: none;
       }
       .yzm-input {
         display: inline-block;
@@ -323,6 +324,7 @@
         border: 0;
         margin: -35px 0 0 221px;
         padding: 0 0 0 10px;
+        outline: none;
       }
       .yzm-btn {
         display: inline-block;
@@ -381,6 +383,7 @@
         font-size: 16px;
         padding: 0 0 0 16px;
         border: 1px solid #e8e8e8;
+        outline: none;
       }
       .search_button {
         width: 143px;
@@ -391,6 +394,7 @@
         text-align: center;
         line-height: 46px;
         margin: -1px -1px 0 0;
+        cursor: pointer
       }
       .search_button:hover {
         background: #00a57f;
