新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -68,22 +68,22 @@
             <div class="menu_sub-tech">
               <span class="back-end_develop">后端开发</span>
               <a class="java" href="https://www.lagou.com/zhaopin/Java/">Java</a>
-              <a class="c++" href="https://www.lagou.com/zhaopin/C++/">C++</a>
+              <a class="cpp" href="https://www.lagou.com/zhaopin/C++/">C++</a>
               <a class="php" href="https://www.lagou.com/zhaopin/PHP/">PHP</a>
               <a class="data_mining" href="https://www.lagou.com/zhaopin/shujuwajue/">数据挖掘</a>
               <a class="search_algorithm" href="https://www.lagou.com/zhaopin/sousuosuanfa/">搜索算法</a>
               <a class="accurate_recommendation" href="https://www.lagou.com/zhaopin/jingzhuntuijian/">精准推荐</a>
               <a class="C" href="https://www.lagou.com/zhaopin/C/">C</a>
-              <a class="C#" href="https://www.lagou.com/zhaopin/C#/">C#</a>
+              <a class="Csharp" href="https://www.lagou.com/zhaopin/C#/">C#</a>
               <a class="full_stack_developer" href="https://www.lagou.com/zhaopin/PHP/">全栈工程师</a>
-              <a class=".NET" href="https://www.lagou.com/zhaopin/.NET/">.NET</a>
+              <a class="dotnet" href="https://www.lagou.com/zhaopin/.NET/">.NET</a>
               <a class="Hadoop" href="https://www.lagou.com/zhaopin/Hadoop/">Hadoop</a>
               <a class="Python" href="https://www.lagou.com/zhaopin/Python/">Python</a>
               <a class="Delphi" href="https://www.lagou.com/zhaopin/Delphi/">Delphi</a>
               <a class="VB" href="https://www.lagou.com/zhaopin/VB/">VB</a>
               <a class="Perl" href="https://www.lagou.com/zhaopin/Perl/">Perl</a>
               <a class="Ruby" href="https://www.lagou.com/zhaopin/Ruby/">Ruby</a>
-              <a class="Node.js" href="https://www.lagou.com/zhaopin/Node.js/">Node.js</a>
+              <a class="Nodejs" href="https://www.lagou.com/zhaopin/Node.js/">Node.js</a>
               <a class="Go" href="https://www.lagou.com/zhaopin/Go/">Go</a>
               <a class="ASP" href="https://www.lagou.com/zhaopin/ASP/">ASP</a>
               <a class="Shell" href="https://www.lagou.com/zhaopin/Shell/">Shell</a>
@@ -95,14 +95,53 @@
             <span class="product">产品</span>
             <a class="product_director" href="https://www.lagou.com/zhaopin/chanpinzongjian/">产品总监</a>
             <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">产品经理</a>
+            <div class="arrow"></div>
           </div>
-          <div class="menu_box-design"></div>
-          <div class="menu_box-operation"></div>
-          <div class="menu_box-market"></div>
-          <div class="menu_box-sale"></div>
-          <div class="menu_box-function"></div>
-          <div class="menu_box-game"></div>
+          <div class="menu_box-design">
+            <span class="product">设计</span>
+            <a class="product_director" href="https://www.lagou.com/zhaopin/chanpinzongjian/">UI设计师</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">交互设计</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">网页设计师</a>
+            <div class="arrow"></div>
+          </div>
+          <div class="menu_box-operation">
+            <span class="product">运营</span>
+            <a class="product_director" href="https://www.lagou.com/zhaopin/chanpinzongjian/">新媒体运营</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">编辑</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">数据运营</a>
+            <div class="arrow"></div>
+          </div>
+          <div class="menu_box-market">
+            <span class="product">市场</span>
+            <a class="product_director" href="https://www.lagou.com/zhaopin/chanpinzongjian/">市场营销</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">市场推广</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">市场策划</a>
+            <div class="arrow"></div>
+          </div>
+          <div class="menu_box-sale">
+            <span class="product">销售</span>
+            <a class="product_director" href="https://www.lagou.com/zhaopin/chanpinzongjian/">销售专员</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">销售经理</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">销售总监</a>
+            <div class="arrow"></div>
+          </div>
+          <div class="menu_box-function">
+            <span class="product">职能</span>
+            <a class="product_director" href="https://www.lagou.com/zhaopin/chanpinzongjian/">HR</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">行政</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">财务</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">审计</a>
+            <div class="arrow"></div>
+          </div>
+          <div class="menu_box-game">
+            <span class="product">游戏</span>
+            <a class="product_director" href="https://www.lagou.com/zhaopin/chanpinzongjian/">小游戏开发</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">U3D</a>
+            <a class="product_manager" href="https://www.lagou.com/zhaopin/chanpinjingli1/">游戏策划</a>
+            <div class="arrow"></div>
+          </div>
         </div>
+        <div class="home_banner"></div>
       </div>
     </div>
   </body>
