新增或修改

--- a/zhipin.html
+++ b/zhipin.html
@@ -494,5 +494,37 @@
         <div class="home_banner"></div>
       </div>
     </div>
+    <div id="container-job">
+      <div class="inner">
+        <div class="tab">
+          <div class="hotTab">24Hour热门</div>
+        </div>
+        <span class="tips">过去24小时，最多人看过的岗位在这里</span>
+        <div class="list-wrapper">
+          <ul class="list_ul">
+            <li class="list_li_01">
+              <div class="li_top">
+                <a class="li_position" href="https://www.lagou.com/jobs/3749121.html" target="_blank"></a>
+              </div>
+              <div class="li_wordcut"></div>
+              <div class="li_labels"></div>
+              <div class="li_bottom"></div>
+            </li>
+            <li class="list_li_02"></li>
+            <li class="list_li_03"></li>
+            <li class="list_li_04"></li>
+            <li class="list_li_05"></li>
+            <li class="list_li_06"></li>
+            <li class="list_li_07"></li>
+            <li class="list_li_08"></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div id="container-companys">
+      <div class="container-companys-body">
+        <div class="ad-companys"></div>
+      </div>
+    </div>
   </body>
 </html>
